--- a/devlog.html
+++ b/devlog.html
@@ -25,11 +25,72 @@
         <h2>Entradas recientes</h2>
 
         <!-- DEVLOG ENTRY -->
-        <div class="card">
-            <h3>NecroFront 1918: Kaiser’s Plague ya tiene página en Game Jolt</h3>
-            <span>NecroFront 1918 · Devlog · Dic 2025</span>
+        <div class="game-card">
+            <div class="game-info">
+                <h3>Los franceses han llegado</h3>
+                <span>NecroFront 1918 · Devlog · Dic 2025</span>
+            </div>
 
-            <div class="project-status status-dev">En desarrollo</div>
+            <div class="project-status status-dev">Devlog entry</div>
+
+            <p style="margin-top: .75rem;">
+                Los zombis franceses finalmente han llegado a
+                <strong>NecroFront 1918: Kaiser’s Plague</strong>.
+                A primera vista puede parecer un simple recolor del zombi alemán,
+                y en parte lo es, principalmente por mis limitaciones actuales con el pixel art.
+            </p>
+
+            <p>
+                Para mantener coherencia en tamaño y proporciones, el diseño se inspiró en
+                uniformes franceses de los años 1915 y 1917. Aun así, este nuevo tipo de enemigo
+                no solo se diferencia visualmente.
+            </p>
+
+            <p>
+                El zombi francés cuenta con algunos atributos ligeramente modificados:
+                inflige el doble de daño y posee un pequeño extra de vida, el cual se vuelve
+                más notorio conforme más tiempo hayas sobrevivido.
+            </p>
+
+            <p>
+                Esta implementación busca reducir la sensación de repetición durante las partidas
+                y añadir un poco más de variedad y desafío al combate.
+            </p>
+
+            <p>
+                Además, se han añadido algunos cambios y mejoras recientes:
+            </p>
+
+            <ul style="margin-left: 1.2rem; margin-top: .5rem;">
+                <li>Incorporación de nuevos efectos de sonido para dar más vida al juego.</li>
+                <li>Creación de la sección de créditos (aún en proceso).</li>
+            </ul>
+
+            <p style="margin-top: .75rem;">
+                Los siguientes pasos antes del lanzamiento de la demo incluyen:
+            </p>
+
+            <ul style="margin-left: 1.2rem; margin-top: .5rem;">
+                <li>Ajustar el volumen de la música y los efectos de sonido.</li>
+                <li>Posible implementación de un menú de pausa.</li>
+                <li>Posible adición de algunos efectos visuales.</li>
+                <li>Corrección de bugs detectados.</li>
+                <li>Testeo del prototipo por parte de testers.</li>
+            </ul>
+
+            <div class="game-gallery">
+                <img src="assets/img/Devlog/frenchzombieingame.png" alt="Captura del juego">
+                <img src="assets/img/Devlog/french_uniforms.jpg" alt="Comparativa de uniformes">
+            </div>
+        </div>
+
+        <div class="game-card">
+            <div class="game-info">
+                <h3>NecroFront 1918: Kaiser’s Plague ya tiene página en Game Jolt</h3>
+                <span>NecroFront 1918 · Devlog · Dic 2025</span>
+            </div>
+
+            <div class="project-status status-dev">Devlog entry</div>
 
             <p style="margin-top: .75rem;">
                 <strong>NecroFront 1918: Kaiser’s Plague</strong> ya cuenta con su página oficial en
