--- a/experiments.html
+++ b/experiments.html
@@ -25,7 +25,7 @@
 
                 <div class="game-info">
                     <h3>FITIX</h3>
-                    <span>PC · Clon</span>
+                    <span>PC · Clon · Game Maker</span>
                     <div class="project-status status-finished">Finalizado</div>
                     <div class="project-status status-experiment">Experimento</div>
                 </div>
@@ -47,7 +47,7 @@
 
                 <div class="game-info">
                     <h3>Prototipo #01 - Walk Sim</h3>
-                    <span>PC · RPG/Walk Sim</span>
+                    <span>PC · RPG/Walk Sim · Game Maker</span>
                     <div class="project-status status-experiment">Experimento</div>
                 </div>
             </div>
@@ -68,7 +68,7 @@
 
                 <div class="game-info">
                     <h3>Prototipo #02 - RPG</h3>
-                    <span>PC · RPG</span>
+                    <span>PC · RPG · Game Maker</span>
                     <div class="project-status status-experiment">Experimento</div>
                 </div>
             </div>
@@ -77,6 +77,27 @@
                 Un RPG simple creado para experimentar con sistemas de diálogo.
                 El enfoque principal está en la interacción con personajes, la presentación de textos
                 y la estructura de conversaciones, sirviendo como base para futuras mecánicas narrativas.
+            </p>
+
+        </div>
+
+        <div class="game-card">
+
+            <div class="game-header">
+                <img src="assets/img/games/Experiments/shot4.png" alt="Logo del juego" class="game-logo">
+
+                <div class="game-info">
+                    <h3>Prototipo #03 - Plataformero</h3>
+                    <span>PC · Plataformero · Godot</span>
+                    <div class="project-status status-experiment">Experimento</div>
+                </div>
+            </div>
+
+            <p>
+                Este experimento fue creado principalmente para aprender a utilizar el motor Godot y explorar las
+                mecánicas básicas de un juego de plataformas 2D. Sirvió como banco de pruebas para implementar
+                movimiento básico del personaje, detección de colisiones, diseño de niveles simples
+                y la integración de elementos interactivos.
             </p>
 
         </div>
