--- a/devlog.html
+++ b/devlog.html
@@ -6,6 +6,7 @@
     <title>Devlog | Blissful Code</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="favicon.ico"/>
 </head>
 
 <body>
@@ -126,10 +127,6 @@
             <a href="index.html">← Volver al inicio</a>
         </p>
     </section>
-
-    <footer>
-        © 2025 Blissful Code — Devlog personal
-    </footer>
 
 </body>
 
