--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Blissful Code | Indie Game Studio</title>
+    <title>Blissful Code | Inicio</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="favicon.ico" />
 </head>
 
 <body>
@@ -14,16 +15,18 @@
         <img src="assets/img/Blissful_Code_Logo.png" alt="Blissful Code Logo" />
         <div>
             <h1>Blissful Code</h1>
-            <p>Un pequeño estudio indie enfocado en crear videojuegos con alma y mucho cariño.</p>
+            <p>Un pequeño espacio de desarrollo indie. En esencia, soy un solo desarrollador creando videojuegos con
+                alma y mucho cariño.</p>
         </div>
     </header>
 
     <section class="about">
         <h2>Sobre el estudio</h2>
         <p>
-            Blissful Code nace del amor por los videojuegos y la curiosidad por crear mundos interactivos.
-            Somos un estudio indie pequeño, experimental y honesto, donde cada proyecto es una oportunidad
-            para aprender, fallar y mejorar.
+            Blissful Code nace de la pasión por el diseño de videojuegos y la curiosidad de transformar ideas en mundos
+            interactivos. Como estudio independiente unipersonal, cada proyecto es un ejercicio de artesanía digital: un
+            espacio para aprender, iterar y evolucionar. Mi filosofía se basa en la honestidad del desarrollo indie,
+            donde cada línea de código es una oportunidad para dar lo mejor y superar nuevos desafíos.
         </p>
     </section>
 
@@ -60,13 +63,13 @@
 
     <section>
         <h2>Contacto</h2>
-        <p>¿Te interesa nuestro trabajo o simplemente quieres saludar?</p>
+        <p>¿Te interesa mi trabajo o simplemente quieres saludar?</p>
         <!--<p style="margin-top: .5rem;">📧 <a href="mailto:contacto@blissfulcode.com">contacto@blissfulcode.com</a></p>-->
         <p>Aqui deberia ir un correo o algo así, pero al parecer no hay nada... por ahora.</p>
     </section>
 
     <footer>
-        © 2025 Blissful Code · Hecho con pasión indie
+        2025 Blissful Code · Juegos hechos con pasión
     </footer>
 
 </body>
