--- a/projects1.html
+++ b/projects1.html
@@ -6,6 +6,7 @@
     <title>Proyectos completos | Blissful Code</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="favicon.ico"/>
 </head>
 
 <body>
@@ -22,7 +23,7 @@
             <h3>¡Ups! Aún no hay lanzamientos</h3>
             <span>ay!</span>
             <p>
-                Todavía no hemos publicado ningún juego, pero pronto habrá novedades.
+                Todavía no he publicado ningún juego, pero pronto habrá novedades.
                 Mientras tanto, siéntete libre de explorar el resto de la página 😉
             </p>
         </div>
