--- a/projects2.html
+++ b/projects2.html
@@ -6,6 +6,7 @@
     <title>En desarrollo | Blissful Code</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="favicon.ico"/>
 </head>
 
 <body>
