--- a/experiments.html
+++ b/experiments.html
@@ -6,7 +6,7 @@
     <title>Experimentos | Blissful Code</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="favicon.ico"/>
+    <link rel="shortcut icon" href="favicon.ico" />
 </head>
 
 <body>
@@ -100,6 +100,34 @@
                 movimiento básico del personaje, detección de colisiones, diseño de niveles simples
                 y la integración de elementos interactivos.
             </p>
+
+        </div>
+
+        <div class="game-card">
+
+            <div class="game-header">
+                <img src="assets/img/games/Experiments/shot5.png" alt="Logo del juego" class="game-logo">
+
+                <div class="game-info">
+                    <h3>Tote Gräben - Early Build</h3>
+                    <span>PC · Plataformero · Game Maker 8.0</span>
+                    <div class="project-status status-finished">Alpha</div>
+                    <div class="project-status status-experiment">Experimento</div>
+                </div>
+            </div>
+
+            <p>
+                Tote Gräben representa la base conceptual y técnica de lo que hoy es Necrofront 1918:
+                Kaiser’s Plague. El proyecto nació originalmente como un prototipo desarrollado en Game Maker 8.0, donde
+                se sentaron las bases de su atmósfera y mecánicas principales. Actualmente, el desarrollo ha migrado por
+                completo a Godot, permitiendo una evolución significativa en su rendimiento, arquitectura de código y
+                posibilidades visuales para alcanzar la visión final del título.
+            </p>
+
+            <div class="game-links">
+                <a href="downloadables/Tote Gräben.exe" download="Tote Gräben.exe">¡Haz clic para descargar el
+                    prototipo!</a>
+            </div>
 
         </div>
 
